testing to builtin lsp

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,7 @@
 {
   "inlayHint.enable": false,
   "suggest.noselect": false,
-  "clangd.arguments": ["--header-insertion=never"]
+  "clangd.arguments": [
+    "--header-insertion=never",
+  ],
 }
